--- a/TripPlannerBackend.API/appsettings.json
+++ b/TripPlannerBackend.API/appsettings.json
@@ -12,7 +12,7 @@
   "Authentication": {
     "Schemes": {
       "Bearer": {
-        "Authority": "https://https://dev-hjeobzmzub6bmk7z.us.auth0.com",
+        "Authority": "https://dev-hjeobzmzub6bmk7z.us.auth0.com",
         "ValidAudiences": [ "https://localhost:6587" ],
         "ValidIssuer": "https://dev-hjeobzmzub6bmk7z.us.auth0.com"
       }
